#76 Generate type-maps for all functions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ publish:snapshot:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: manual
+      allow_failure: true
     - if: '$CI_COMMIT_BRANCH == "master"'
       when: on_success
     - when: never
