--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ publish:snapshot:
   stage: publish
   extends: .node:image
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_COMMIT_TAG !~ /^v[0-9]+[.][0-9]+[.][0-9]+$/'
       when: manual
       allow_failure: true
     - if: '$CI_COMMIT_BRANCH == "master"'
