--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@weclapp:registry": "https://gitlab.internal.weclapp.com/api/v4/projects/145/packages/npm/"
   },
   "engines": {
-    "node": "^16.13.0",
-    "npm": "^8.1.0"
+    "node": "^18.12.1 || ^16.13.0",
+    "npm": "^9.1.0 || ^8.1.0"
   },
   "types": "./sdk/dist/index.d.ts",
   "main": "./sdk/dist/index.cjs",
