--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "module": "commonjs",
-        "target": "ES2020",
+        "moduleResolution": "Node",
+        "module": "ESNext",
+        "target": "ESNext",
         "sourceMap": false,
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
