--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@weclapp/sdk",
-  "version": "1.8.0",
+  "version": "^1.8.0",
   "description": "SDK generator based on a weclapp api swagger file",
   "author": "weclapp",
   "sideEffects": false,
@@ -16,8 +16,8 @@
     "@weclapp:registry": "https://gitlab.internal.weclapp.com/api/v4/projects/145/packages/npm/"
   },
   "engines": {
-    "node": "^18.12.1",
-    "npm": "^9.1.0 || ^8.1.0"
+    "node": "^18",
+    "npm": "^9 || ^8"
   },
   "types": "./sdk/dist/index.d.ts",
   "main": "./sdk/dist/index.cjs",
@@ -35,33 +35,35 @@
     "cli:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
     "sdk:build": "./bin/cli.js tests/openapi.json --target node",
     "lint": "eslint {src,tests}/**/*.ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "ci:test": "npm run lint:fix && npm run cli:build && npm run sdk:build"
   },
   "repository": {
     "type": "git",
     "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
     "rollup-plugin-string": "^3.0.0"
   },
   "dependencies": {
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@types/fs-extra": "^11.0.1",
-    "@types/yargs": "^17.0.23",
+    "@types/yargs": "^17.0.24",
     "chalk": "^5.2.0",
     "change-case": "^4.1.2",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
     "indent-string": "^5.0.0",
-    "openapi-types": "^12.1.0",
-    "rollup": "^3.20.2",
+    "openapi-types": "^12.1.3",
+    "pretty-ms": "^8.0.0",
+    "rollup": "^3.24.0",
     "rollup-plugin-ts": "^3.2.0",
-    "typescript": "^5.0.2",
-    "yargs": "^17.7.1"
+    "typescript": "^5.1.3",
+    "yargs": "^17.7.2"
   },
   "peerDependencies": {
     "rxjs": "^7.5.5"
