breaking: rename binary and add documentation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "weclapp",
   "sideEffects": false,
   "bin": {
-    "sdk-generator": "./bin/cli.js"
+    "build-weclapp-sdk": "./bin/cli.js"
   },
   "files": [
     "bin",
