--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@weclapp:registry": "https://gitlab.internal.weclapp.com/api/v4/projects/145/packages/npm/"
   },
   "engines": {
-    "node": "^18",
+    "node": "^18 || ^20",
     "npm": "^9 || ^8"
   },
   "types": "./sdk/dist/index.d.ts",
@@ -36,7 +36,7 @@
     "sdk:build": "./bin/cli.js tests/openapi.json --target node",
     "lint": "eslint {src,tests}/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "ci:test": "npm run lint:fix && npm run cli:build && npm run sdk:build"
+    "ci:test": "npm run lint:fix && npm run cli:build && npm run sdk:build",
     "release": "standard-version"
   },
   "repository": {
@@ -44,8 +44,8 @@
     "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
     "rollup-plugin-string": "^3.0.0",
     "standard-version": "^9.5.0"
@@ -62,7 +62,7 @@
     "indent-string": "^5.0.0",
     "openapi-types": "^12.1.3",
     "pretty-ms": "^8.0.0",
-    "rollup": "^3.24.0",
+    "rollup": "^3.25.1",
     "rollup-plugin-ts": "^3.2.0",
     "typescript": "^5.1.3",
     "yargs": "^17.7.2"
