--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ generate:targets:
       - TARGET: browser.rx
   script:
     - chmod +x ./bin/cli.js
-    - ./bin/cli.js tests/openapi.json --target $TARGET
+    - ./bin/cli.js test/openapi.json --target $TARGET
 
 generate:variants:
   extends: .npm:defaults
@@ -79,7 +79,7 @@ generate:variants:
       - FLAGS: --deprecated --generate-unique --target browser
   script:
     - chmod +x ./bin/cli.js
-    - ./bin/cli.js tests/openapi.json $FLAGS
+    - ./bin/cli.js test/openapi.json $FLAGS
 
 publish:
   tags:
