--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,15 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+
       - name: Download dist files
         uses: actions/download-artifact@v3
         with:
@@ -48,7 +57,9 @@ jobs:
           path: dist
 
       - name: Publish
-        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish --access public
 
   publish_snapshot:
     runs-on: ubuntu-latest
@@ -57,6 +68,17 @@ jobs:
       !startsWith(github.ref, 'refs/tags/v')
     needs: build
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+
       - name: Download dist files
         uses: actions/download-artifact@v3
         with:
@@ -64,10 +86,12 @@ jobs:
           path: dist
 
       - name: Publish snapshot
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0)
           LATEST_TAG_RAW=$(echo "$LATEST_TAG" | sed 's/v//')
           COMMITS_SINCE_LAST_TAG=$(git rev-list "$LATEST_TAG"..HEAD --count)
           VERSION="$LATEST_TAG_RAW-dev.$COMMITS_SINCE_LAST_TAG"
           npm version "$VERSION" --git-tag-version=false
-          npm publish
+          npm publish --access public
