--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "SDK generator based on a weclapp api swagger file",
   "author": "weclapp",
   "sideEffects": false,
+  "bugs": "https://github.com/weclapp/sdk/issues",
+  "homepage": "https://github.com/weclapp/sdk#readme",
+  "repository": "git+https://github.com/weclapp/sdk.git",
   "bin": {
     "build-weclapp-sdk": "./bin/cli.js"
   },
@@ -35,10 +38,6 @@
     "lint:fix": "npm run lint -- --fix",
     "ci:test": "npm run lint:fix && npm run cli:build && npm run sdk:build",
     "release": "standard-version"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.11",
