--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tsconfig.lib.json"
   ],
   "engines": {
-    "node": "^18 || ^20",
+    "node": "^20",
     "npm": "^9 || ^8"
   },
   "types": "./sdk/dist/index.d.ts",
