--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "engines": {
     "node": "^20",
-    "npm": "^9 || ^8"
+    "npm": "^10"
   },
   "types": "./sdk/dist/index.d.ts",
   "main": "./sdk/dist/index.cjs",
