fix: filtering for undefined

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "cli:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "cli:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
-    "sdk:build": "./bin/cli.js test/openapi.json --target node",
+    "sdk:build": "./bin/cli.js test/openapi.json --target browser",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "ci:test": "npm run lint:fix && npm run cli:build && npm run sdk:build",
