--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,6 @@ jobs:
   build:
     name: Build CLI and SDK
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [node, node.rx, browser, browser.rx]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -26,16 +23,38 @@ jobs:
         env:
           NODE_ENV: production
 
-      - name: Generate
-        run: |
-          chmod +x ./bin/cli.js
-          ./bin/cli.js test/openapi.json --target ${{ matrix.target }}
-
       - name: Upload dist files
         uses: actions/upload-artifact@v4
         with:
           name: build
           path: dist
+
+  generate:
+    name: Build CLI and SDK
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        target: [ node, node.rx, browser, browser.rx ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.16.0
+
+      - name: Download dist files
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: dist
+
+      - name: Generate
+        run: |
+          chmod +x ./bin/cli.js
+          ./bin/cli.js test/openapi.json --target ${{ matrix.target }}
 
   publish:
     name: Publish stable release
