--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,9 @@ jobs:
         with:
           node-version: 20.16.0
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Download dist files
         uses: actions/download-artifact@v4
         with:
