--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    name: Build CLI and SDK
+    name: Build CLI
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -30,7 +30,7 @@ jobs:
           path: dist
 
   generate:
-    name: Build CLI and SDK
+    name: Generate SDK
     runs-on: ubuntu-latest
     needs: build
     strategy:
