--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run cli:build
-        env:
-          NODE_ENV: production
+        run: npm run build
 
       - name: Upload dist files
         uses: actions/upload-artifact@v4
