--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": [
     "bin",
     "dist",
-    "tsconfig.lib.json"
+    "tsconfig.sdk.json"
   ],
   "engines": {
     "node": ">=20",
@@ -36,37 +36,43 @@
     }
   },
   "scripts": {
-    "cli:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
-    "cli:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
-    "sdk:build": "./bin/cli.js test/openapi.json --target browser",
+    "build": "rollup --config rollup.config.ts --configPlugin typescript={tsconfig:\\'tsconfig.node.json\\'} --configImportAttributesKey with",
+    "build:watch": "npm run build -- --watch",
+    "cli:browser": "./bin/cli.js test/openapi.json --target browser",
+    "cli:browser:cache": "./bin/cli.js test/openapi.json --target browser --cache",
+    "cli:browser.rx": "./bin/cli.js test/openapi.json --target browser.rx",
+    "cli:browser.rx:cache": "./bin/cli.js test/openapi.json --target browser.rx --cache",
+    "cli:node": "./bin/cli.js test/openapi.json --target node",
+    "cli:node:cache": "./bin/cli.js test/openapi.json --target node  --cache",
+    "cli:node.rx": "./bin/cli.js test/openapi.json --target node.rx",
+    "cli:node.rx:cache": "./bin/cli.js test/openapi.json --target node.rx  --cache",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "ci:test": "npm run lint:fix && npm run cli:build && npm run sdk:build",
+    "ci": "npm run lint && npm run build && npm run cli:browser",
     "release": "standard-version"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@rollup/pluginutils": "5.1.4",
+    "@typescript-eslint/eslint-plugin": "8.25.0",
+    "@typescript-eslint/parser": "8.25.0",
     "eslint": "^8.46.0",
     "rollup-plugin-string": "^3.0.0",
     "standard-version": "^9.5.0"
   },
   "dependencies": {
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@types/fs-extra": "^11.0.1",
-    "@types/yargs": "^17.0.24",
-    "chalk": "^5.3.0",
-    "change-case": "^4.1.2",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
-    "indent-string": "^5.0.0",
-    "openapi-types": "^12.1.3",
-    "pretty-ms": "^8.0.0",
-    "rollup": "^3.27.2",
-    "rollup-plugin-ts": "^3.4.3",
-    "typescript": "^5.1.6",
-    "yargs": "^17.7.2"
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "12.1.2",
+    "@types/fs-extra": "11.0.1",
+    "@types/yargs": "17.0.33",
+    "chalk": "5.3.0",
+    "change-case": "4.1.2",
+    "dotenv": "16.3.1",
+    "indent-string": "5.0.0",
+    "openapi-types": "12.1.3",
+    "pretty-ms": "8.0.0",
+    "rollup": "4.34.8",
+    "typescript": "5.7.3",
+    "yargs": "17.7.2"
   },
   "peerDependencies": {
     "rxjs": "^7.8.0"
