--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,11 @@
 {
-    "compilerOptions": {
-        "strict": true,
-        "noImplicitAny": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true,
-        "moduleResolution": "Node",
-        "module": "ESNext",
-        "target": "ESNext",
-        "sourceMap": false,
-        "allowSyntheticDefaultImports": true,
-        "baseUrl": ".",
-        "paths": {
-            "@logger": ["src/utils/logger.ts"],
-            "@generator/*": ["src/generator/*"],
-            "@enums/*": ["src/enums/*"],
-            "@utils/*": ["src/utils/*"],
-            "@ts/*": ["src/ts/*"],
-            "@/*": ["./*"],
-            "@sdk/*": ["sdk/*"],
-            "@tests/*": ["tests/*"]
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        },
+        {
+            "path": "./tsconfig.sdk.json"
         }
-    },
-    "include": [
-        "tests/**/*.ts",
-        "src/**/*.ts",
-        "sdk/**/*.ts"
     ]
 }
