--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: Main
 
 on: push
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   build:
     name: Build CLI
@@ -13,12 +17,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20.16.0
+          node-version: 22.14.0
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build CLI
         run: npm run build
 
       - name: Upload dist files
@@ -41,7 +45,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20.16.0
+          node-version: 22.14.0
 
       - name: Install dependencies
         run: npm ci
@@ -52,14 +56,14 @@ jobs:
           name: build
           path: dist
 
-      - name: Generate
+      - name: Generate SDK
         run: |
           chmod +x ./bin/cli.js
           ./bin/cli.js test/openapi.json --target ${{ matrix.target }}
           ./bin/cli.js test/openapi_v2.json --target ${{ matrix.target }}
 
   publish:
-    name: Publish stable release
+    name: Publish release version
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
@@ -70,8 +74,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20.16.0
-          registry-url: https://registry.npmjs.org/
+          node-version: 22.14.0
 
       - name: Download dist files
         uses: actions/download-artifact@v4
@@ -79,10 +82,8 @@ jobs:
           name: build
           path: dist
 
-      - name: Publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --access public
+      - name: Publish release
+        run: npm publish --access public --tag latest
 
   publish_snapshot:
     name: Publish snapshot version
@@ -100,8 +101,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.14
-          registry-url: https://registry.npmjs.org/
+          node-version: 22.14.0
 
       - name: Download dist files
         uses: actions/download-artifact@v4
@@ -110,12 +110,10 @@ jobs:
           path: dist
 
       - name: Publish snapshot
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0)
           LATEST_TAG_RAW=$(echo "$LATEST_TAG" | sed 's/v//')
           COMMITS_SINCE_LAST_TAG=$(git rev-list "$LATEST_TAG"..HEAD --count)
           VERSION="$LATEST_TAG_RAW-dev.$COMMITS_SINCE_LAST_TAG"
           npm version "$VERSION" --git-tag-version=false
-          npm publish --access public
+          npm publish --access public --tag snapshot
